# cricketanalytics

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enriched_balls.py  003_features_archetypes.py  004_matching_engine.py
scripts/: build_franchise_dna.py  compute_features.py  discover_archetypes.py  download_cricsheet.py  extract_player_features.py  ingest_cricsheet.py  init_db.sql  run_api.py  setup_redis.sh  simulate_auction.py  test_auction.py  train_all_models.py  train_hdbscan.py  train_umap.py  visualize_galaxy.py
sovereign/: __init__.py
sovereign/api/: __init__.py  dependencies.py  errors.py  main.py  middleware.py  schemas.py  websocket_manager.py
sovereign/config/: player_overrides.json  settings.py  weights.toml
sovereign/db/: connection.py  migrations.py  models.py
sovereign/enrichment/: __init__.py  context.py  models.py  spi.py
sovereign/features/: __init__.py  builder.py  models.py  opposition.py  phase_performance.py  pressure_response.py  stability.py  tactical.py  utils.py
sovereign/ingestion/: __init__.py  classifier.py  models.py  parser.py  pipeline.py  validator.py
sovereign/intelligence/: __init__.py  archetype.py  clusterer.py  inference.py  models.py  reducer.py  tracker.py  utils.py
sovereign/matching/: __init__.py  dna.py  homology.py  models.py  (+3 more)
tests/: conftest.py
ui/: .env.example  .eslintrc.json  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+101 files in other folders)
