[tool.poetry]
name = "cricketanalytics"
version = "0.1.0"
description = "Sovereign Cricket Analytics - Phase 0 Foundation"
authors = ["Sampatel31"]
readme = "README.md"
packages = [{ include = "sovereign" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7"
pydantic-settings = "^2.3"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.29"
alembic = "^1.13"
redis = { version = "^5.0", extras = ["hiredis"] }
structlog = "^24.1"
tomli = { version = "^2.0", python = "<3.11" }
greenlet = "^3.0"
psycopg2-binary = "^2.9"
pyyaml = "^6.0"
orjson = "^3.9"
rich = "^13.7"
polars = "^1.0"
numpy = "^1.26"
hmmlearn = "^0.3"
scikit-learn = "^1.4"
umap-learn = "^0.5"
hdbscan = "^0.8"
joblib = "^1.3"
fastapi = ">=0.115,<1.0"
uvicorn = {version = ">=0.30,<1.0", extras = ["standard"]}
httpx = ">=0.27,<1.0"
python-multipart = ">=0.0.9,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
anyio = "^4.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["sovereign"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
